objects/Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Action Plan</relationshipLabel>
        <relationshipName>Action_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Action Plan</relationshipLabel>
        <relationshipName>Action_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analytics__c</fullName>
        <label>Analytics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Objective</label>
        <referenceTo>AccountObjective__c</referenceTo>
        <relationshipLabel>Action Plan</relationshipLabel>
        <relationshipName>Action_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumer_Experience__c</fullName>
        <label>Consumer Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Activation__c</fullName>
        <label>Health Activation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Programs</fullName>
                </value>
                <value>
                    <fullName>Financial Management</fullName>
                </value>
                <value>
                    <fullName>Population Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identified_Gap__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identified Gap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Optimization__c</fullName>
        <label>Provider Optimization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Network Optimization</fullName>
                </value>
                <value>
                    <fullName>Specialty Drugs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Plans_of_Attack__c</fullName>
        <label>Total Plans of Attack</label>
        <summaryForeignKey>Action_Plan_Attack__c.Action_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Action Plan</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>